corrected font on admin. aligned colors between dsp-core views and client css

--- a/web/admin/css/style.css
+++ b/web/admin/css/style.css
@@ -1,6 +1,31 @@
+/**
+ * This file is part of the DreamFactory Services Platform(tm) (DSP)
+ *
+ * DreamFactory Services Platform(tm) <http://github.com/dreamfactorysoftware/dsp-core>
+ * Copyright 2012-2014 DreamFactory Software, Inc. <support@dreamfactory.com>
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+@import url(//fonts.googleapis.com/css?family=Lato|Open+Sans);
+
 html, body {
-	height:     100%;
-	overflow-x: hidden;
+	height:      100%;
+	overflow-x:  hidden;
+	font-family: 'Lato', 'Open Sans', 'Helvetica Neue Light', 'Arial', sans-serif;
+}
+
+p {
+	font-family: 'Open Sans', 'Helvetica Neue Light', 'Arial', sans-serif;
 }
 
 .app-wrapper {
@@ -38,6 +63,12 @@ html, body {
 .access {
 	display: inline-block;
 	width:   80px;
+}
+
+.lead {
+	margin-bottom: 15px;
+	font-family:   'Lato', 'Open Sans', sans-serif;
+	font-weight:   300;
 }
 
 .limit-list {
@@ -327,7 +358,7 @@ h3.panel-title {
 }
 
 .list-group-item {
-    padding: 8px 12px;
+	padding: 8px 12px;
 }
 
 .alert > i.fa {
@@ -344,6 +375,10 @@ h3.panel-title {
 a.list-group-item:hover > i.fa, .alert:hover > i.fa {
 	opacity:    1;
 	transition: opacity 0.3s;
+}
+
+.radio {
+	font-size: 16px;
 }
 
 .radio > label > i.fa, .form-group > a > i.fa {
@@ -452,9 +487,9 @@ label.error {
 	margin-top: -6px;
 }
 
-.btn-group-nav > .btn {
-	font-family: "Open Sans", "Lato", Arial, sans-serif;
-}
+/*.btn-group-nav > .btn {*/
+/*font-family: "Open Sans", "Lato", Arial, sans-serif;*/
+/*}*/
 
 .btn-group-nav > .btn-md,
 .btn-group-nav.btn-group-md > .btn,
